--- a/main.css
+++ b/main.css
@@ -29,14 +29,14 @@ a {
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
   background-color: black;
   background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto;
+  margin: 10% auto;
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
@@ -95,7 +95,7 @@ nav .right-header {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: end;
-  font-size: 32px;
+  font-size: 28px;
 }
 
 nav .right-header a {
@@ -106,7 +106,7 @@ nav .right-header a {
 
 video {
   display: block;
-  margin: 5% auto;
+  margin: 2% auto;
 }
 
 @-webkit-keyframes bounce {
@@ -251,21 +251,35 @@ video {
 }
 
 .output {
-  color: white;
-  padding: 13em;
+  font-family: 'Courier New', Courier, monospace;
+  color: black;
+  font-weight: bold;
+  padding: 6em;
   text-align: center;
   background-image: url(imgs/border.png);
   background-size: auto;
-  width: 40%;
+  width: 35%;
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  font-size: 30px;
+  font-size: 24px;
   border: 10px solid transparent;
   margin: auto;
+  display: none;
+  word-wrap: break-word;
 }
 
-.retry-btn {
-  margin: 3em;
+#retry-btn {
+  margin: 1em auto;
   font-size: 18px;
+  display: none;
+}
+
+.lightning {
+  opacity: 0;
+  position: absolute;
+  -webkit-transform: scale(3);
+          transform: scale(3);
+  top: 30%;
+  left: 45%;
 }
 /*# sourceMappingURL=main.css.map */
