--- a/main.scss
+++ b/main.scss
@@ -40,13 +40,15 @@ a{
     border: 1px solid #888;
     width: 80%; 
     text-align: center;
+    border-radius: 5px;
     h1{
         font-size: 48px;
-        margin-bottom: 3em;
+        margin-bottom: 2em;
     }
     P{
         font-family: 'Times New Roman', Times, serif;
-        margin-bottom: 10em;
+        margin-bottom: 4em;
+        font-size: 24px;
     }
     button{
         font-size: 24px;
@@ -89,7 +91,7 @@ a{
         
     }
   }
-video{
+#shaman{
     display: block;
     margin: 2% auto; 
 }
@@ -116,7 +118,7 @@ video{
     display:inline-block;
     position: absolute;
     top: 20%;
-    left: 2%;
+    left: 20%;
     animation-name: bounce;
     animation-timing-function: ease-in-out;
     animation-duration: 1s;
@@ -128,7 +130,7 @@ video{
     display:block;
     position: absolute;
     top: 50%;
-    left: 2%;
+    left: 20%;
     animation-name: bounce;
     animation-timing-function: ease-in-out;
     animation-duration: 1s;
@@ -140,7 +142,7 @@ video{
     display:block;
     position: absolute;
     top: 80%;
-    left: 2%;
+    left: 20%;
     animation-name: bounce;
     animation-timing-function: ease-in-out;
     animation-duration: 1.1s;
@@ -152,7 +154,7 @@ video{
     display:block;
     position: absolute;
     top: 20%;
-    left: 85%;
+    left: 65%;
     animation-name: bounce;
     animation-timing-function: ease-in-out;
     animation-duration: 1.2s;
@@ -164,7 +166,7 @@ video{
     display:block;
     position: absolute;
     top: 50%;
-    left: 85%;
+    left: 65%;
     animation-name: bounce;
     animation-timing-function: ease-in-out;
     animation-duration: 0.9s;
@@ -176,7 +178,7 @@ video{
     display:block;
     position: absolute;
     top: 80%;
-    left: 85%;
+    left: 65%;
     animation-name: bounce;
     animation-timing-function: ease-in-out;
     animation-duration: 1.1s;
@@ -207,6 +209,7 @@ video{
     margin: 1em auto;
     font-size: 18px;
     display: none;
+    padding: 0.5em;
  }
 
  .lightning{
