--- a/main.scss
+++ b/main.scss
@@ -93,7 +93,12 @@ a{
   }
 #shaman{
     display: block;
-    margin: 2% auto; 
+    margin: 2% auto;
+    animation-name: bounce;
+    animation-timing-function: ease-in-out;
+    animation-duration: 1.1s;
+    animation-direction: alternate;
+    animation-iteration-count: infinite; 
 }
 @keyframes bounce {
     from {transform: translateY(0px);}
@@ -191,7 +196,7 @@ a{
     font-family: 'Courier New', Courier, monospace;
     color: black;
     font-weight: bold;
-    padding: 6em;
+    padding: 6em 10em;
     text-align: center;
     background-image: url(imgs/border.png);
     background-size:auto;
@@ -214,11 +219,21 @@ a{
 
  .lightning{
     opacity: 0;
+    z-index: 1;
     position: absolute;
     transform: scale(3);
     top: 30%;
     left: 45%;
  }
+ .rose{
+    opacity: 0;
+    z-index: 1;
+    position: absolute;
+    transform: scale(3);
+    top: 30%;
+    left: 45%;
+ }
+
 
 
 
